refactor:рефакторинг taskmanager