@@ -1,3 +1,6 @@
+package manager;
+
+import manager.HistoryManager;
 import task.Task;
 
 import java.util.Collections;
@@ -5,30 +8,27 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
+    private final int LIST_SIZE = 10;
     private LinkedList<Task> listHistory;
 
     public InMemoryHistoryManager() {
         listHistory = new LinkedList<>();
     }
 
-    public LinkedList<Task> getListHistory() {
-        return listHistory;
-    }
-
 
     @Override
     public void add(Task task) {
-        if (listHistory.size() < 10) {
-            listHistory.add(task);
-        } else {
+        if (listHistory.size() > LIST_SIZE) {
             listHistory.removeFirst();
-            listHistory.add(task);
         }
+        listHistory.add(task);
+
     }
 
     @Override
     public List<Task> getHistory() {
-        return listHistory.isEmpty() ? Collections.emptyList() : getListHistory();
+        List<Task> copy = List.copyOf(listHistory);
+        return listHistory.isEmpty() ? Collections.emptyList() : copy;
     }
 
 }
